--- a/week4/cssfile/homework1.css
+++ b/week4/cssfile/homework1.css
@@ -1,4 +1,4 @@
-.container{
+.container {
   display: flex;
 }
 
@@ -7,34 +7,28 @@
 }
 
 #example1 {
-  margin-block: 100px;
-  border-left: none;
+  width: fit-content;
+  height: max-content;
   border: solid black 7px;
-  width: 300px;
-  height: 350px;
-  margin-left: -30px;
+  border-left: none;
   padding-left: 40px;
+  margin: auto;
+}
 
-  }
+#example2 {
+  margin-left: 110px;
+  margin-right: 100px;
+}
 
-  #example2 {
-    width: 300px;
-    margin-left: 110px;
-    margin-right: 100px;
-  }
-
-  h1 {
-    margin-left: 20px;
-    font-size: 90px;
-    font-family: 'Roboto', sans-serif;
-    margin-top: 10px;
-    margin-bottom: 1px;
+h1 {
+  margin-left: 20px;
+  font-size: 90px;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 1px;
 }
 
 p {
-    font-size: 30px;
-    margin-left: 20px;
-    margin-top: 1px;
-    margin-bottom: 10px;
-
+  font-size: 30px;
+  margin-left: 20px;
+  padding-bottom: 5%;
 }
