--- a/week4/cssfile/homework3.css
+++ b/week4/cssfile/homework3.css
@@ -7,13 +7,13 @@
 }
 
 #pic {
-    margin-right: 100px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-right: 6%;
+    margin-top: 3%;
+  
 }
 
 #box1{
-  height: 400px;
+  height: max-content;
   border: solid black 7px;
   margin-top: 10%;
   text-align: right;
