--- a/assignment/cssfile/contact.css
+++ b/assignment/cssfile/contact.css
@@ -161,13 +161,12 @@ body {
     display: flex;
     flex-direction: column;
     gap: 25px;
-    margin-top: 3%;
+    margin-top: 3.5%;
 }
 
 .textsidebar {
     display: flex;
     flex-direction: column;
-    margin-top: 2%;
 }
 
 .container3 {
@@ -198,7 +197,7 @@ body {
     width: 75%;
 }
 
-.bigbox{
+.bigbox {
     display: flex;
 }
 
@@ -310,6 +309,28 @@ body {
     .container2 h2 {
         font-size: 40px;
     }
+
+    .contactbox {
+        text-align: center;
+    }
+
+    .bigbox {
+        display: block;
+        flex-direction: column;
+    }
+    
+    .box1{
+       margin: 5%;
+    }   
+
+    .namebox{
+        margin-top: 3%;
+    }
+
+    .container{
+        width: auto;
+    }
+
 
     .footer {
         flex-direction: column;
