--- a/assignment/cssfile/contact.css
+++ b/assignment/cssfile/contact.css
@@ -170,6 +170,14 @@ body {
     font-family: 'Rubik', sans-serif;
 }
 
+input {
+    font-family: 'Rubik', sans-serif;
+}
+
+form{
+    font-family: 'Rubik', sans-serif;
+}
+
 .container3 {
     padding: 10px;
     background: #363434;
